basic setup is finished
	modified:   pom.xml
	new file:   swazam-client/pom.xml
	new file:   swazam-client/src/main/java/org/tuwien/swalab2/swazam/client/App.java
	new file:   swazam-client/src/test/java/org/tuwien/swalab2/swazam/client/AppTest.java
	new file:   swazam-peer/pom.xml
	new file:   swazam-peer/src/main/java/org/tuwien/swalab2/swazam/peer/App.java
	new file:   swazam-peer/src/test/java/org/tuwien/swalab2/swazam/peer/AppTest.java

--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,8 @@
     <name>Parent Project for SwaZam Lab</name>
 
     <modules>
-        <!--<module>swazam-client</module>-->
-        <!--<module>swazam-peer</module>-->
+        <module>swazam-client</module>
+        <module>swazam-peer</module>
 	<module>swazam-webapp</module>
     </modules>
 
