--- a/swazam-client/pom.xml
+++ b/swazam-client/pom.xml
@@ -21,65 +21,11 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>ac.at.tuwien.infosys.swa.audio</groupId>
+      <artifactId>fingerprint</artifactId>
+      <version>0.1.1</version>
+    </dependency>
   </dependencies>
-  
-      <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <configuration>
-                    <archive>
-                        <manifest>
-                            <mainClass>com.mycompany.mypackage.MyMainClass</mainClass>
-                        </manifest>
-                    </archive>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.dstovall</groupId>
-                <artifactId>onejar-maven-plugin</artifactId>
-                <version>1.4.4</version>
-                <executions>
-                    <execution>
-                        <configuration>
-                            <!-- Optional -->
-                            <onejarVersion>0.97</onejarVersion>
-                            <!-- Optional, use only if you need to include native libraries (dll's) -->
-                            <binlibs>
-                                <fileSet>
-                                    <directory>${project.build.directory}/../../repo</directory>
-                                    <includes>
-                                        <include>fingerprint.jar</include>
-                                    </includes>
-                                </fileSet>
-                            </binlibs>
-                            <!-- Optional, default is false -->
-                            <attachToBuild>true</attachToBuild>
-                            <!-- Optional, default is "onejar" -->
-                            <classifier>onejar</classifier>
-                        </configuration>
-                        <goals>
-                            <goal>one-jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
-
-    <pluginRepositories>
-        <pluginRepository>
-            <id>onejar-maven-plugin.googlecode.com</id>
-            <url>http://onejar-maven-plugin.googlecode.com/svn/mavenrepo</url>
-        </pluginRepository>
-    </pluginRepositories>
     
-    	<repositories>
-	    <repository>
-        <id>repo</id>
-        <url>file://${project.basedir}/../repo</url>
-    </repository>
-	</repositories>
-  
 </project>
