builds executable jar

--- a/swazam-client/pom.xml
+++ b/swazam-client/pom.xml
@@ -15,6 +15,23 @@
     </properties>
 
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <mainClass>org.tuwien.swalab2.swazam.client.Client</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>S
+            </plugin>
+        </plugins>
+    </build>
+
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
