--- a/pom.xml
+++ b/pom.xml
@@ -1,48 +1,49 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                              http://maven.apache.org/maven-v4_0_0.xsd">
-	<modelVersion>4.0.0</modelVersion>
+    <modelVersion>4.0.0</modelVersion>
 
-	<groupId>org.tuwien.swalab2</groupId>
-	<artifactId>swazam-parent</artifactId>
-	<packaging>pom</packaging>
-	<version>1.0</version>
-	<name>Parent Project for SwaZam Lab</name>
+    <groupId>org.tuwien.swalab2</groupId>
+    <artifactId>swazam-parent</artifactId>
+    <packaging>pom</packaging>
+    <version>1.0</version>
+    <name>Parent Project for SwaZam Lab</name>
 
-	<modules>
-		<module>swazam-client</module>
-		<module>swazam-peer</module>
-		<module>swazam-webapp</module>
-	</modules>
+    <modules>
+        <module>swazam-client</module>
+        <module>swazam-peer</module>
+        <module>swazam-webapp</module>
+    </modules>
 
-	<build>
-		<pluginManagement>
-			<plugins>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-compiler-plugin</artifactId>
-					<configuration>
-						<source>1.6</source>
-						<target>1.6</target>
-					</configuration>
-				</plugin>
-			</plugins>
-		</pluginManagement>
-	</build>
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <configuration>
+                        <source>1.6</source>
+                        <target>1.6</target>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
 
-	<dependencies>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
-			<scope>test</scope>
-		</dependency>
-	</dependencies>
-	<repositories>
-	    <repository>
-        <id>repo</id>
-        <url>file://${project.basedir}/repo</url>
-    </repository>
-	</repositories>
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>3.8.1</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+    <!--repositories>
+        <repository>
+            <id>in-project</id>
+            <name>In Project Repo</name>
+            <url>file://${project.basedir}/libs</url>
+        </repository>
+    </repositories-->
 	
 </project>
