--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,13 @@
         </pluginManagement>
     </build>
 
+    <repositories>
+        <repository>
+            <id>lib</id>
+            <url>${project.baseUri}/lib</url>
+        </repository>
+    </repositories>
+    
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
@@ -37,13 +44,28 @@
             <version>3.8.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>ac.at.tuwien.infosys.swa.audio</groupId>
+            <artifactId>fingerprint</artifactId>
+            <version>0.1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>jtransforms</groupId>
+            <artifactId>jtransforms</artifactId>
+            <version>2.4</version>
+        </dependency>
+        <dependency>
+            <groupId>javazoom</groupId>
+            <artifactId>mp3spi</artifactId>
+            <version>1.9.5</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>tritonus</groupId>
+            <artifactId>misc</artifactId>
+            <version>0.3.6</version>
+            <scope>runtime</scope>
+        </dependency>
     </dependencies>
-    <!--repositories>
-        <repository>
-            <id>in-project</id>
-            <name>In Project Repo</name>
-            <url>file://${project.basedir}/libs</url>
-        </repository>
-    </repositories-->
 	
 </project>
