--- a/swazam-client/pom.xml
+++ b/swazam-client/pom.xml
@@ -65,7 +65,7 @@
     <repositories>
         <repository>
             <id>lib</id>
-            <url>../${project.baseUri}/lib</url>
+            <url>..//${project.baseUri}lib</url>
         </repository>
     </repositories>
     
