--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
     <repositories>
         <repository>
             <id>lib</id>
-            <url>${project.baseUri}/lib</url>
+            <url>${project.baseUri}lib</url>
         </repository>
     </repositories>
     
