added a sample .mp3 file and changed the POM so things should now work

--- a/swazam-client/pom.xml
+++ b/swazam-client/pom.xml
@@ -31,7 +31,7 @@
                             <mainClass>org.tuwien.swalab2.swazam.client.Client</mainClass>  
                             <arguments>  
                                 <argument>query</argument>  
-                                <argument>${project.basedir}/../music/sample1.mp3</argument>  
+                                <argument>${project.basedir}/sample1.mp3</argument>  
                             </arguments>  
                         </configuration>  
                     </execution>  
