peer persists library
	new file:   .gitignore
	modified:   pom.xml
	modified:   src/main/java/org/tuwien/swalab2/swazam/peer/Peer.java

--- a/swazam-peer/pom.xml
+++ b/swazam-peer/pom.xml
@@ -27,7 +27,10 @@
                             <goal>java</goal>  
                         </goals>  
                         <configuration>  
-                            <mainClass>org.tuwien.swalab2.swazam.peer.Peer</mainClass>   
+                            <mainClass>org.tuwien.swalab2.swazam.peer.Peer</mainClass>  
+                            <arguments>  
+                                <argument>1234</argument>  
+                            </arguments> 
                         </configuration>  
                     </execution>  
                 </executions>  
