--- a/swazam-peer/pom.xml
+++ b/swazam-peer/pom.xml
@@ -16,7 +16,7 @@
 
     <build>
         <plugins>
-            <plugin>  
+           <!-- <plugin>  
                 <groupId>org.codehaus.mojo</groupId>  
                 <artifactId>exec-maven-plugin</artifactId>  
                 <version>1.2.1</version>  
@@ -34,7 +34,7 @@
                         </configuration>  
                     </execution>  
                 </executions>  
-            </plugin>  
+            </plugin> --> 
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <configuration>
@@ -69,33 +69,17 @@
     
 
     <dependencies>
-        <dependency>
+            <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>3.8.1</version>
             <scope>test</scope>
         </dependency>
+        
         <dependency>
-            <groupId>ac.at.tuwien.infosys.swa.audio</groupId>
-            <artifactId>fingerprint</artifactId>
-            <version>0.1.1</version>
-        </dependency>
-        <dependency>
-            <groupId>jtransforms</groupId>
-            <artifactId>jtransforms</artifactId>
-            <version>2.4</version>
-        </dependency>
-        <dependency>
-            <groupId>javazoom</groupId>
-            <artifactId>mp3spi</artifactId>
-            <version>1.9.5</version>
-            <scope>runtime</scope>
-        </dependency>
-        <dependency>
-            <groupId>tritonus</groupId>
-            <artifactId>misc</artifactId>
-            <version>0.3.6</version>
-            <scope>runtime</scope>
+            <groupId>org.tuwien.swalab2</groupId>
+            <artifactId>swazam-util</artifactId>
+            <version>1.0</version>
         </dependency>
     </dependencies>
 </project>
