--- a/swazam-util/pom.xml
+++ b/swazam-util/pom.xml
@@ -14,7 +14,15 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     <build>
-        <plugins>           
+        <plugins>  
+                        <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <configuration>
+                        <source>1.7</source>
+                        <target>1.7</target>
+                    </configuration>
+                </plugin>         
 	       <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <configuration>
