modified:   swazam-client/src/main/java/org/tuwien/swalab2/swazam/client/Client.java 	new file:   swazam-peer/lib/jtella/jtella/0.9/_maven.repositories 	new file:   swazam-peer/lib/jtella/jtella/0.9/jtella-0.9.jar 	new file:   swazam-peer/lib/jtella/jtella/0.9/jtella-0.9.pom         new file:   swazam-peer/lib/jtella/jtella/maven-metadata-local.xml 	modified:   swazam-peer/pom.xml 	modified:   swazam-peer/src/main/java/org/tuwien/swalab2/swazam/peer/Peer.java 	renamed:    swazam-util/src/main/java/org/tuwien/swalab2/swazam/util/Fingerprint.java -> swazam-util/src/main/java/org/tuwien/swalab2/swazam/util/fingerprint/FingerprintFile.java

--- a/swazam-peer/pom.xml
+++ b/swazam-peer/pom.xml
@@ -89,5 +89,11 @@
             <artifactId>swazam-util</artifactId>
             <version>1.0</version>
         </dependency>
+		<!--dependency>
+			<groupId>jtella</groupId>
+			<artifactId>jtella</artifactId>
+			<version>0.9</version>
+		</dependency-->
     </dependencies>
+    
 </project>
