--- a/jtella/pom.xml
+++ b/jtella/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.kenmccrary</groupId>
     <artifactId>jtella</artifactId>
-    <version>0.9</version>
+    <version>0.10-rc1</version>
     <packaging>jar</packaging>
 
     <name>jtella</name>
