--- a/swazam-client/pom.xml
+++ b/swazam-client/pom.xml
@@ -17,14 +17,15 @@
 
     <build>
         <plugins>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-compiler-plugin</artifactId>
-                    <configuration>
-                        <source>1.7</source>
-                        <target>1.7</target>
-                    </configuration>
-                </plugin>   
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.0</version>
+                <configuration>
+                    <source>1.7</source>
+                    <target>1.7</target>
+                </configuration>
+            </plugin>   
             <!--<plugin>  
                 <groupId>org.codehaus.mojo</groupId>  
                 <artifactId>exec-maven-plugin</artifactId>  
@@ -58,7 +59,7 @@
                     </descriptorRefs>
                 </configuration>
                 <executions>
-                     <execution>
+                    <execution>
                         <id>make-assembly</id> 
                         <phase>package</phase> 
                         <goals>
@@ -109,7 +110,7 @@
             <scope>runtime</scope>
         </dependency>-->
         
-	<dependency>
+        <dependency>
             <groupId>org.tuwien.swalab2</groupId>
             <artifactId>swazam-util</artifactId>
             <version>1.0</version>
