--- a/swazam-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/swazam-webapp/src/main/webapp/WEB-INF/web.xml
@@ -46,8 +46,12 @@
         <servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
         <init-param>
             <param-name>com.sun.jersey.config.property.packages</param-name>
-            <param-value>org.tuwien.swalab2.services.rest</param-value>
+            <param-value>org.tuwien.swalab2.services.rest</param-value>            
         </init-param>
+        <init-param>
+        <param-name>com.sun.jersey.api.json.POJOMappingFeature</param-name>
+        <param-value>true</param-value>
+    </init-param>
     </servlet>
     <servlet-mapping>
         <servlet-name>Jersey Servlet</servlet-name>
