added peer dependency to client, first steps for Client request submission method

--- a/swazam-client/pom.xml
+++ b/swazam-client/pom.xml
@@ -116,6 +116,12 @@
             <version>1.0</version>
         </dependency>
 		
+		<dependency>
+            <groupId>org.tuwien.swalab2</groupId>
+            <artifactId>swazam-peer</artifactId>
+            <version>1.0</version>
+        </dependency>
+		
     </dependencies>
 
 </project>
