--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <name>Parent Project for SwaZam Lab</name>
 
     <modules>
-        <module>jtella</module>
+        <!--module>jtella</module-->
         <module>swazam-util</module>
         <module>swazam-client</module>
         <module>swazam-peer</module>
