--- a/swazam-webapp/pom.xml
+++ b/swazam-webapp/pom.xml
@@ -197,7 +197,7 @@
         </repository>
         <repository>
             <id>JBoss repository</id>
-            <url>http://repository.jboss.com/maven2/</url>
+            <url>https://repository.jboss.org/nexus/content/groups/public-jboss/</url>
         </repository>
         <repository>
             <id>EclipseLink Repo</id>
